--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Participants|WIAC 2025</title>
+    <title>Participants | WIAC 2025</title>
 </head>
 <body>
     <header class="header">
@@ -19,23 +18,35 @@
         <nav class="navbar">
                     <ul class="lista">
                         <li><a class="linkNav" href="/">HOME</a></li>
-                        <li><a class="linkNav" href="/inscription">INSCRIPCION</a></li>
-                        <li><a class="linkNav" href="/ubicacion">UBICACION</a></li>
-                        <li><a class="linkNav" href="/participants">PARTICIPANTES</a></li>
-                        <li><a class="linkNav" href="/itinerario">ITINERARIO</a></li>   
-                        <li><a class="linkNav" href="/tyc">TERMINOS Y CONDICIONES</a></li>       
+                        <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
+                        <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
+                        <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
+                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>   
+                        <li><a class="linkNav" href="/tyc">TERMINS AND CONDITIONS</a></li>       
                     </ul>
         </nav>
     </header>
     <main>
         <h1 class="title">Participants</h1>
         <div class="containerParticipants">
-            <iframe src="https://lookerstudio.google.com/embed/reporting/3f652c98-1a52-40b6-a3ba-cbfe50005013/page/FI78D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+            <iframe src="https://lookerstudio.google.com/embed/reporting/dc1a42b1-41e8-484a-ae96-6f0158f6883d/page/bg6DE" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
         </div>
-        <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+        <div class="needHelpContainer">
+            <button class="needHelpBtn btnHelp"
+                onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+            </button>
         </div>
     </main>
     <footer class="footer">
+        <div class="containerFooter">
+            <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
+            <img src="/resources/img/logoWIAC2025.png" alt="logoWIAC">
+            <img src="/resources/img/logoaata.png" alt="logoAATA">
+            <a href="/tyc" class="tycFooter">Terms & conditions</a>
+            <a href="/tyc" class="privacyFotter">Privacy Policy</a>
+            <a class="aFooter" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
+            
+        </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
 </body>
