--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -19,7 +19,7 @@
         <input class="form-control form-control-sm" type="password" name="pass" placeholder="Password">
         <input class="btn btn-primary btn-lg" type="submit" class="btn-login" value="Login">
     </form>
-    <a href="/register" class="btn-register">Register</a>
+    <!-- <a href="/register" class="btn-register">Register</a> -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <% if(typeof alert != 'undefined') { %>
