--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,46 +9,157 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Schedule|WIAC 2025</title>
 </head>
+
 <body>
     <header class="header">
-        <div class="logo"><a href="/"><img class="logo " src="/resources/img/LogoWIAC2025.png" alt="logo wiac 2025"></a></div>
+        <div class="logo"><a href="/"><img class="logo " src="/resources/img/LogoWIAC2025.png" alt="logo wiac 2025"></a>
+        </div>
         <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">&#9776;</label> 
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav class="navbar">
-                    <ul class="lista">
-                        <li><a class="linkNav" href="/">HOME</a></li>
-                        <li><a class="linkNav" href="/inscription">INSCRIPCION</a></li>
-                        <li><a class="linkNav" href="/ubicacion">UBICACION</a></li>
-                        <li><a class="linkNav" href="/participants">PARTICIPANTES</a></li>
-                        <li><a class="linkNav" href="/itinerario">ITINERARIO</a></li>   
-                        <li><a class="linkNav" href="/tyc">TERMINOS Y CONDICIONES</a></li>       
-                    </ul>
+            <ul class="lista">
+                <li><a class="linkNav" href="/">HOME</a></li>
+                <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
+                <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
+                <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
+                <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
+                <li><a class="linkNav" href="/tyc">TERMS AND CONDITIONS</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <h1 class="title">Schedule</h1>
         <div class="schedule">
-            <div class="scheduleDays">
-                <div class="day"><span><h4>Monday</h4><p>12hs-18hs</p></span>
-                    <span><h4>06.08.2025</h4><p>Set up</p></span>
-                </div>
-                <div class="day"><span><h4>Tuesday</h4><p>8hs-13hs</p><p>8hs-13hs</p><p>13hs-14hs</p><p>15hs-17hs</p></span><span><h4>07.08.2025</h4><p>Registration and equipment Inspection</p><p>Practice range open</p><p>Captains Meeting</p><p>The March of Nations & Opening Ceremony</p>
-                </div>
-                <div class="day"><span><h4>Wednesday</h4><p>8hs-16hs</p><p>8hs-17hs</p><p>9hs-12hs</p><p>13hs-16hs</p><p>17hs-20hs</p></span><span><h4>08.08.2025</h4><p>Registration and Equipment Inspection</p><p>Practice range open</p> <p>1st Round</p><p>2nd Round</p><p>3rd Round</p></span></div>
-                <div class="day"><span><h4>Thursday</h4><p>8hs-13hs</p><p>9hs-12hs</p><p>13hs-16hs</p></span><span><h4>09.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p></span></div>
-                <div class="day"><span><h4>Friday</h4><p>8hs-13hs</p><p>9hs-12hs</p><p>13hs-16hs</p></span><span><h4>10.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p></span></div>
-                <div class="day"><span><h4>Saturday</h4><p>8hs-17hs</p><p>9hs-12hs</p><p>13hs-16hs</p><p>17hs-20hs</p></span><span><h4>11.08.2025</h4><p>Practice Range Open</p><p>1st Round</p><p>2nd Round</p><p>3rd Round</p></span></div>
-                <div class="day"><span><h4>Sunday</h4><p>11hs-15hs</p></span><span><h4>12.08.2025</h4><p>Award Ceremony</p><p>Banquet</p><p>Closing Ceremony</p></span></div>
+            <div class="scheduleInfo">
+                <p>The event begins on Monday, August 6th, with the setup phase taking place between 12pm and 6pm, setting
+                    the stage for a week of intense competition and camaraderie.<br>
+                    Tuesday, August 7th marks the formal start, with equipment registration and inspection from 8:00am. to
+                    1:00 p.m. At the same time, the practice field will be opened for participants. At 1:00 p.m. the
+                    captains' meeting will take place, where key details of the competition will be discussed. The day
+                    will culminate with the March of Nations and the Opening Ceremony at 3:00 pm, a symbolic event that
+                    will celebrate unity and the competitive spirit.<br>
+                    Wednesday, August 8th will be dedicated to the official competition. From 8:00 am to 8:00 pm,
+                    participants will have the opportunity to demonstrate their skills in the first three rounds, after
+                    a new registration and practice period in the early hours of the day.<br>
+                    On Thursday, August 9th and Friday, August 10th, the open practice field and the first two rounds of the
+                    day will continue, from 8:00 am to 4:00 pm. During these days, competitors will seek to consolidate
+                    their positions to advance in the tournament.<br> Saturday, August 11th will be a crucial day, with
+                    the practice field open from 8:00am and three more rounds of competition that will last until 8:00
+                    pm., where the best athletes will seek to secure a place on the podium.<br>
+                    Finally, on Sunday, August 12th, the event will close with the Awards Ceremony, which will begin at
+                    11:00am, followed by a banquet for the participants. The day will culminate with the Closing
+                    Ceremony at 3:00 pm, ending a week of competition and celebrating the winners.</p>
             </div>
-        </div>
-        <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
-        </div>
+            <div class="scheduleDays">
+                <img src="/resources/img/scheduletarget.jpg" alt="">
+                <div class="day"><span>
+                        <h4>Monday</h4>
+                        <p>12hs-18hs</p>
+                    </span>
+                    <span>
+                        <h4>10-06-2025</h4>
+                        <p>Set up</p>
+                    </span>
+                </div>
+                <div class="day"><span>
+                        <h4>Tuesday</h4>
+                        <p>8hs-13hs</p>
+                        <p>8hs-13hs</p>
+                        <p>13hs-14hs</p>
+                        <p>15hs-17hs</p>
+                    </span><span>
+                        <h4>10-07-2025</h4>
+                        <p>Registration and equipment Inspection</p>
+                        <p>Practice range open</p>
+                        <p>Captains Meeting</p>
+                        <p>The March of Nations & Opening Ceremony</p>
+                        </span>
+                </div>
+                <div class="day"><span>
+                        <h4>Wednesday</h4>
+                        <p>8hs-16hs</p>
+                        <p>8hs-17hs</p>
+                        <p>9hs-12hs</p>
+                        <p>13hs-16hs</p>
+                        <p>17hs-20hs</p>
+                    </span><span>
+                        <h4>10-08-2025</h4>
+                        <p>Registration and Equipment Inspection</p>
+                        <p>Practice range open</p>
+                        <p>1st Round</p>
+                        <p>2nd Round</p>
+                        <p>3rd Round</p>
+                    </span></div>
+                <div class="day"><span>
+                        <h4>Thursday</h4>
+                        <p>8hs-13hs</p>
+                        <p>9hs-12hs</p>
+                        <p>13hs-16hs</p>
+                    </span><span>
+                        <h4>10-09-2025</h4>
+                        <p>Practice Range Open</p>
+                        <p>1st Round</p>
+                        <p>2nd Round</p>
+                    </span></div>
+                <div class="day"><span>
+                        <h4>Friday</h4>
+                        <p>8hs-13hs</p>
+                        <p>9hs-12hs</p>
+                        <p>13hs-16hs</p>
+                    </span><span>
+                        <h4>10-10-2025</h4>
+                        <p>Practice Range Open</p>
+                        <p>1st Round</p>
+                        <p>2nd Round</p>
+                    </span></div>
+                <div class="day"><span>
+                        <h4>Saturday</h4>
+                        <p>8hs-17hs</p>
+                        <p>9hs-12hs</p>
+                        <p>13hs-16hs</p>
+                        <p>17hs-20hs</p>
+                    </span><span>
+                        <h4>10-11-2025</h4>
+                        <p>Practice Range Open</p>
+                        <p>1st Round</p>
+                        <p>2nd Round</p>
+                        <p>3rd Round</p>
+                    </span></div>
+                <div class="day"><span>
+                        <h4>Sunday</h4>
+                        <p>11hs-15hs</p>
+                    </span><span>
+                        <h4>10-12-2025</h4>
+                        <p>Award Ceremony</p>
+                        <p>Banquet</p>
+                        <p>Closing Ceremony</p>
+                    </span></div>
+            </div>
+
+            <div class="needHelpContainer">
+                <button class="needHelpBtn btnHelp"
+                    onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+                </button>
+            </div>
     </main>
     <footer class="footer">
+        <div class="containerFooter">
+            <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
+            <img src="/resources/img/logoWIAC2025.png" alt="logoWIAC">
+            <img src="/resources/img/logoaata.png" alt="logoAATA">
+            <a href="/tyc" class="tycFooter">Terms & conditions</a>
+            <a href="/tyc" class="privacyFotter">Privacy Policy</a>
+            <a class="aFooter"
+                href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact
+                us</a>
+
+        </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
 </body>
+
 </html>
