--- a/views/home/registersucess.ejs
+++ b/views/home/registersucess.ejs
@@ -8,24 +8,26 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <title>Sucess | WIAC 2025</title>
+        <title>Success | WIAC 2025</title>
 </head>
 <body>
-    <h1>Registro Exitoso!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <% if(typeof alert != 'undefined') { %>
+    <main>
+        <div class="successContainer">
+            <div class="regSuccess">
+        <img src="/resources/img/successIcon.png" alt="Success">
+        <h1>Congratulations!</h1>
+        <p>You have registered for the WIAC 2025 tournament</p>
+        <a href="/" class="btn  btn-secondary">GO HOME</a> 
+        </div>
+        </div>
+
+
+    
         <script>
-            Swal.fire({
-                    title:'<%= alertTitle %>',
-                    text:'<%= alertMessage %>',
-                    icon:'<%= alertIcon %>',
-                    showConfirmaButton: '<%= showConfirmButton %>',
-                    timer: '<%= timer %>',
-                    }).then(()=>{
-                window.location='/<%= ruta %>'
-            })
-            
+            setTimeout(function(){
+                window.location.href = "/";
+            }, 10000); 
         </script>
-        <%}%>
+    </main>
 </body>
 </html>
