--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Location | WIAC 2025</title>
 </head>
 <body>
@@ -19,23 +18,36 @@
         <nav class="navbar">
                     <ul class="lista">
                         <li><a class="linkNav" href="/">HOME</a></li>
-                        <li><a class="linkNav" href="/inscription">INSCRIPCION</a></li>
-                        <li><a class="linkNav" href="/ubicacion">UBICACION</a></li>
-                        <li><a class="linkNav" href="/participants">PARTICIPANTES</a></li>
-                        <li><a class="linkNav" href="/itinerario">ITINERARIO</a></li>   
-                        <li><a class="linkNav" href="/tyc">TERMINOS Y CONDICIONES</a></li>       
+                        <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
+                        <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
+                        <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
+                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>   
+                        <li><a class="linkNav" href="/tyc">TERMINS AND CONDITIONS</a></li>       
                     </ul>
         </nav>
     </header>
     <main class="ubicacionMain">
         <h1 class="title">Location</h1>
+        <h2>The tournament takes place at Polideportivo Municipal Colinas de Peralta Ramos Mar del Plata</h2>
         <div class="ubicacionContainer">
-            <iframe class="ubicacionIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52536.0220384604!2d-59.03176385136723!3d-34.616768099999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc8f29cca883f1%3A0x1f4a67b15a05c43f!2sPOLIDEPORTIVO%20G.%20RODRIGUEZ!5e0!3m2!1sen!2sit!4v1724320518982!5m2!1sen!2sit" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="ubicacionIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3141.7208907394815!2d-57.554490524077515!3d-38.0535893477826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584dde1f71ee895%3A0x3d6622c9601f0c7f!2sPolideportivo%20Municipal%20Colinas%20de%20Peralta%20Ramos%20Mar%20del%20Plata!5e0!3m2!1ses!2sit!4v1728035121607!5m2!1ses!2sit" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-    </main>
-    <div class="needHelp"><p class="needHelpP">Need help?</p> <a class="needHelpBtn" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">aata.argentina.presidente@gmail.com</a>
+    <div class="needHelpContainer">
+        <button class="needHelpBtn btnHelp"
+        onclick="window.location.href='mailto:aata.argentina.presidente@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
+        </button>
     </div>
+</main>
     <footer class="footer">
+        <div class="containerFooter">
+            <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
+            <img src="/resources/img/logoWIAC2025.png" alt="logoWIAC">
+            <img src="/resources/img/logoaata.png" alt="logoAATA">
+            <a href="/tyc" class="tycFooter">Terms & conditions</a>
+            <a href="/tyc" class="privacyFotter">Privacy Policy</a>
+            <a class="aFooter" href="mailto:aata.argentina.presidente@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
+            
+        </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
 </body>
