--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -148,9 +148,9 @@
     </main>
     <footer class="footer">
         <div class="containerFooter">
-            <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
-            <img src="/resources/img/logoWIAC2025.png" alt="logoWIAC">
-            <img src="/resources/img/logoaata.png" alt="logoAATA">
+            <img src="resources/img/logoIFAA(@).png" alt="logoIFAA">
+            <img src="resources/img/logoWIAC2025.png" alt="logoWIAC">
+            <img src="resources/img/logoaata.png" alt="logoAATA">
             <a href="/tyc" class="tycFooter">Terms & conditions</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter"
